--- a/Rohit_Master_Thesis/3.Methodology.tex
+++ b/Rohit_Master_Thesis/3.Methodology.tex
@@ -115,38 +115,38 @@ After providing these training configurations to the engine class, we can call t
 
 \subsection{Testing}
 
-After the training/inferencing is finished, we can move ahead to next critical step i.e. to evaluate the model's performance. For this the \textbf{test} function from the engine class is used, and similar to fit function we again need to pass the model and the datamodule components. Here the \textbf{Abnormal} directory is used which has the anomalous images. 
+After the training/inferencing is finished, we can move to the next critical step, i.e., to evaluate the model's performance. For this, the \textbf{test} function from the engine class is used, and similar to the fit function, we again need to pass the model and the datamodule components. Here, the \textbf{Abnormal} directory is used, which has the anomalous images. 
 
-After the testing is finished, its results are displayed which have two of the metrics mentioned in section \ref{subsec:Evaluation Metrics} \gls{auroc} and F1-Score.
+After the testing, its results are displayed, with two metrics mentioned in section \ref{subsec:Evaluation Metrics} \gls{auroc} and F1-Score.
 
 \subsection{Model Exporting}
 \label{subsec:Model Exporting}
 
-Exporting a trained model is a very important task, as then the model can be deployed in real-world applications. This involves converting the trained model into a format optimized for efficient inference on various hardwares, like \glspl{cpu}, \glspl{gpu} etc. Thus the model can be incorporated into production environments, operating at scale by processing new data and identifying anomalies in real-time.
+Exporting a trained model is a very important task, as the model can then be deployed in real-world applications. This process involves converting the trained model into a format optimized for efficient inference on various hardware, like \glspl{cpu}, \glspl{gpu} etc. Thus, the model can be incorporated into production environments, operating at scale by processing new data and identifying anomalies in real time.
 
-The Anomalib library lets us convert the models into formats like OpenVINO, ONNX etc. We are exporting our models into OpenVINO format. OpenVINO is a open-source software toolkit used to optimize and deploy \gls{dl} models. It minimizes resource requirements and effectively deploy on various platforms like cloud. OpenVINO\textsuperscript{TM} enables inference on several hardware platforms, including \glspl{cpu}, \glspl{gpu}.\cite{openvino2024}
+The Anomalib library lets us convert the models into formats like OpenVINO, ONNX, etc. We export our models into OpenVINO format. OpenVINO is an open-source software toolkit used to optimize and deploy \gls{dl} models. It minimizes resource requirements and effectively deploys on various platforms like the cloud. OpenVINO\textsuperscript{TM} enables inference on several hardware platforms, including \glspl{cpu}, \glspl{gpu}.\cite{openvino2024}
 
-The export process is initialized by setting the desired export format via the \textbf{'ExportType'} variable. The trained model and the destination where the model should be exported are then passed to the \textbf{'Export'} function present in the engine class, which is responsible for the conversion. In the specified export location, three files are save there:
+The export process is initialized by setting the desired export format via the \textbf{'ExportType'} variable. The trained model and the destination where the model should be exported are then passed to the \textbf{'Export'} function present in the engine class, which is responsible for the conversion. In the specified export location, three files are saved there:
 
-\textbf{1. 'metadata.json'} which stores the threshold value as mentioned in the section \ref{subsec:Model Training} based on which the classification can be done.
+\textbf{1. 'metadata.json'}, which stores the threshold value as mentioned in the section \ref{subsec:Model Training} based on which the classification can be done.
 
-\textbf{2. 'model.bin'} its a binary file that contains the weights and biases of the model.
+\textbf{2. 'model.bin'} is a binary file that contains the weights and biases of the model.
 
-\textbf{3. 'model.xml'} this file stores the models architecture. It contains the structure of neural network, including layers, the connections between them etc.
+\textbf{3. 'model.xml'} this file stores the model's architecture. It contains the neural network structure, including layers, the connections between them, etc.
 
 \section{Inference}
 \label{subsec:Inference}
 
-In the inference phase the model is utilized to make predictions on new and unseen data. This section documents the approaches for achieving inference using a trained model, mainly focusing on two tasks: \textbf{'Image Classification'} and \textbf{'Image Segmentation'}. Both the tasks are crucial in assessing the effectiveness of the model in detecting and localizing anomalies in solder joints on \glspl{pcb}.
+In the inference phase, the model is utilized to make predictions on new and unseen data. This section documents the approaches for achieving inference using a trained model, mainly focusing on two tasks: \textbf{'Image Classification'} and \textbf{'Image Segmentation'}. Both tasks are crucial in assessing the effectiveness of the model in detecting and localizing anomalies in solder joints on \glspl{pcb}.
 
-Firstly the trained model is loaded using the \textbf{'OpenVINOInferencer'} or \textbf{'TorchInferencer'} class which can enable efficient inference on \glspl{cpu} or \glspl{gpu} respectively. Here we will be using OpenVINOInferencer, by providing the model and metadata paths of the trained model as explained in the section \ref{subsec:Model Exporting}. Once we are done with creating the \textbf{'Inferencer'} object, then we can move on to performing image classification and segmentation as described below.
+Firstly, the trained model is loaded using the \textbf{'OpenVINOInferencer'} or \textbf{'TorchInferencer'} class, which can enable efficient inference on \glspl{cpu} or \glspl{gpu} respectively. Here, we will be using OpenVINOInferencer by providing the model and metadata paths of the trained model as explained in the section \ref{subsec:Model Exporting}. Once we are done creating the \textbf{'Inferencer'} object, we can move on to performing image classification and segmentation as described below.
 
 \subsection{Image Classification}
 \label{subsec:Image Classification}
 
-Image Classification is an important task within \gls{cv} because it helps in identifying and recognizing the object present in an image. It involves labelling input images based on the likelihood of it being anomalous or not \cite{FANG2020100980}.
+Image Classification is an important task within \gls{cv} because it helps identify and recognize the object present in an image. It involves labeling input images based on their likelihood of being anomalous or not \cite{FANG2020100980}.
 
-As mentioned in section \ref{subsec:Inference}, after creating the inference object then we pass the input image to its \textbf{'predict'} function, which calculates the predicted label and the anomalous score. The predicted results are then visualized using \textbf{'ImageVisualizer'} class, its configured for \textbf{CLASSIFICATION} mode, so it overlays the classification results on the input image, making it simpler to analyze the results.
+As mentioned in section \ref{subsec:Inference}, after creating the inference object then, we pass the input image to its \textbf{'predict'} function, which calculates the predicted label and the anomalous score. The predicted results are then visualized using \textbf{'ImageVisualizer'} class, which is configured for \textbf{CLASSIFICATION} mode, so it overlays the classification results on the input image, making it simpler to analyze the results.
 
 \begin{figure}[ht!]
     \centering
@@ -155,12 +155,12 @@ As mentioned in section \ref{subsec:Inference}, after creating the inference obj
     \label{fig:Image classification on NG image}
 \end{figure}
 
-The figure \ref{fig:Image classification on NG image} shows the result of image classification, where it gives three images as an output, one is the input image, second one shows the predicted heat map which shows where could be the possible anomaly, and the third gives the prediction label and the score.
+Figure \ref{fig:Image classification on NG image} shows the result of image classification, where it gives three images as an output: one is the input image, the second one shows the predicted heat map, which shows where the possible anomaly and the third gives the prediction label and the score.
 
 \subsection{Image Segmentation}
 %\subsubsection{Metrics Calculation}
 
-Image segmentation is a method of analyzing images at the pixel level. It involves utilizing multiple techniques to label each pixel as part of a particular class or instance\cite{IBM2024}. So using image segmentation we can we can point where the model has predicted the anomaly to be as shown in the figure \ref{fig:Image Segmentation on NG image}.
+Image segmentation is a method of analyzing images at the pixel level. It involves utilizing multiple techniques to label each pixel as part of a particular class or instance\cite{IBM2024}. So, using image segmentation, we can point where the model has predicted the anomaly to be as shown in the figure \ref{fig:Image Segmentation on NG image}.
 
 \begin{figure}[ht!]
     \centering
@@ -172,24 +172,24 @@ Image segmentation is a method of analyzing images at the pixel level. It involv
 \section{Evaluation Metrics}
 \label{subsec:Evaluation Metrics}
 
-Evaluation metrics play a crucial role in assessing the performance of a machine learning model. These metrics aid in quantifying the model's ability to differentiate between anomalous and normal images, offering valuable insights into the model's effectiveness and areas that can be improved. This section outlines the primary evaluation metrics utilized in this thesis: AUROC, Accuracy, Recall, Precision, F1-Score, and Confusion Matrix.
+Evaluation metrics play a crucial role in determining how well the performance of a \gls{ml} model. These metrics aid in quantifying the model's ability to differentiate between anomalous and normal images, offering valuable insights into the model's effectiveness and areas for improvement. This section outlines the primary evaluation metrics utilized in this thesis: AUROC, Accuracy, Recall, Precision, F1-Score, and Confusion Matrix.
 
 \subsection*{Area Under the Receiver-Operating Curve (AUROC)}
 \label{subsec:AUROC}
 
-The \gls{auroc} measures the ability of a classification model to differentiate across different classes. It has been particularly useful in measuring trade-offs of the \gls{tpr} (sensitivity) versus the \gls{fpr} (1-specificity) across different threshold settings. A higher \gls{auroc} value indicates better model performance, with a value of 1 representing a perfect model and a value of 0.5 indicating a model that performs no better than random chance\cite{FAWCETT2006861}. For quality control applications, this is extremely important because, missing an anomaly can possibly have severe consequences for a manufacturing process. %Write how its calculated in anomalib if possible
+The \gls{auroc} measures the ability of a classification model to differentiate across different classes. It has been particularly useful in measuring trade-offs of the \gls{tpr} (sensitivity) versus the \gls{fpr} (1-specificity) across different threshold settings. A higher \gls{auroc} value indicates better model performance, with a value of 1 representing a perfect model and a value of 0.5 indicating that the model that performs no better than random chance\cite{FAWCETT2006861}. This is extremely important for quality control applications because missing an anomaly can have severe consequences for a manufacturing process. %Write how its calculated in anomalib if possible
 
 \subsection*{Accuracy}
 \label{subsec:Accuracy}
 
-Accuracy is the rate of correct predictions made by the model. It is often assessed by using an unseen dataset that was never utilized throughout the learning process, like the custom test set mentioned in the table \ref{tab:dataset-distribution}.\cite{Kohavi1998}. It is expressed as: 
+Accuracy is the rate of correct predictions made by the model. It is often assessed using an unseen dataset that was never utilized throughout the learning process, like the custom test set mentioned in the table \ref{tab:dataset-distribution}.\cite{Kohavi1998}. It is expressed as: 
 
 \begin{equation}
     \text{Accuracy} = \frac{\text{\gls{tp}} + \text{\gls{tn}}}{\text{\gls{tp}} + \text{\gls{tn}} + \text{\gls{fp}} + \text{\gls{fn}}} \quad \text{\cite{Walker2024}}
     \label{eq:accuracy}
 \end{equation}
 
-where \gls{tp}, \gls{tn}, \gls{fp}, and \gls{fn} are True Positives, True Negatives, False Positives, and False Negatives, respectively. It gives an overall view of the performance of the model.
+Where \gls{tp}, \gls{tn}, \gls{fp}, and \gls{fn} are True Positives, True Negatives, False Positives, and False Negatives, respectively. It gives an overall view of the performance of the model.
 
 \subsection*{Recall}
 \label{subsec:Recall}
@@ -201,7 +201,7 @@ Recall, also known as sensitivity, refers to the ratio of accurately predicted p
     \label{eq:recall}
 \end{equation}
 
-A higher Recall value means that the model is good in detecting most anomalies, but it doesn't take into account the number of \gls{fp}.
+A higher Recall value means that the model is good at detecting most anomalies, but it does not consider the number of \gls{fp}.
 
 \subsection*{Precision}
 \label{subsec:Precision}
@@ -213,7 +213,7 @@ Precision, also known as confidence, refers to the proportion of accurately pred
     \label{eq:precision}
 \end{equation}
 
-This metric is very important where the cost of false positives is high, because it indicates how well the model can prevent incorrectly labelling normal cases as anomalies. 
+This metric is very important where the cost of false positives is high, as it indicates how well the model can prevent the incorrect labeling of normal cases as anomalies. 
 
 \subsection*{F1-Score}
 \label{subsec:F1-Score}
@@ -224,12 +224,12 @@ The F1-score is a metric that achieves a balance between precision and recall. T
 \text{F1-Score} = 2 \times \frac{\text{Precision} \times \text{Recall}}{\text{Precision} + \text{Recall}} \quad \text{\cite{Walker2024}}
 \end{equation}
 
-It makes this metric valuable since it evaluates the ability of a model to detect anomalies(Recall) and  its precision identifying true positives without an excessive number of false positive. 
+It makes this metric valuable since it evaluates a models capability to detect anomalies(Recall) and its precision in identifying true positives without an excessive number of false positives. 
 
 \subsection*{Confusion Matrix}
 \label{subsec:Confusion Matrix}
 
-Confusion Matrix is a matrix which simply shows the predicted and the actual classifications made by the model \cite{Kohavi1998}. It is basically a table containing the \gls{tp}, \gls{tn}, \gls{fp}, and \gls{fn} values. Subsequently, a Confusion Matrix can help to explain what kinds of errors a model makes so that improvements can be made specifically within the same area.
+A confusion matrix simply shows the predicted and actual classifications made by the model \cite{Kohavi1998}. It is a table containing the \gls{tp}, \gls{tn}, \gls{fp}, and \gls{fn} values. Subsequently, a Confusion Matrix can help explain the errors a model makes so that improvements can be made specifically within the same area.
 
 \begin{figure}[ht!]
     \centering
@@ -238,6 +238,6 @@ Confusion Matrix is a matrix which simply shows the predicted and the actual cla
     \label{fig:confusion matrix}
 \end{figure}
 
-The figure \ref{fig:confusion matrix} shows a confusion matrix from one of our model. Here the \gls{tp} is the top-left corner dark blue cell, \gls{tn} is the bottom-right dark blue cell, \gls{fp} is the bottom-left light blue cell, and \gls{fn} is the upper-right light blue cell.
+Figure \ref{fig:confusion matrix} shows a confusion matrix from one of our models. Here, the \gls{tp} is the top-left corner dark blue cell, \gls{tn} is the bottom-right dark blue cell, \gls{fp} is the bottom-left light blue cell, and \gls{fn} is the upper-right light blue cell.
 
 
